[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/PNG/playerShip1_blue.png" type="Texture" id=1]
[ext_resource path="res://assets/PNG/Effects/fire14.png" type="Texture" id=2]
[ext_resource path="res://assets/PNG/Effects/fire01.png" type="Texture" id=3]
[ext_resource path="res://assets/PNG/Effects/fire00_rotated90.png" type="Texture" id=4]
[ext_resource path="res://Ships/GunTurrets/FixedTurret.tscn" type="PackedScene" id=5]
[ext_resource path="res://Ships/StandardShip_P_.gd" type="Script" id=6]
[ext_resource path="res://VFX/HPBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://Ships/Other/Highlight.tscn" type="PackedScene" id=8]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
spread = 3.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 300.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
color_ramp = SubResource( 4 )
hue_variation = -1.0

[node name="Player" type="KinematicBody2D"]
collision_mask = 67
script = ExtResource( 6 )

[node name="Pivot" type="Position2D" parent="."]

[node name="Engines" type="Node2D" parent="Pivot"]

[node name="REngine" type="Particles2D" parent="Pivot/Engines"]
position = Vector2( -18, 24 )
rotation = 3.14159
emitting = false
amount = 120
one_shot = true
randomness = 1.0
fixed_fps = 60
visibility_rect = Rect2( -100, -100, 500, 200 )
local_coords = false
process_material = SubResource( 2 )
texture = ExtResource( 4 )

[node name="LEngine" type="Particles2D" parent="Pivot/Engines"]
position = Vector2( -18, -22 )
rotation = 3.14159
emitting = false
amount = 120
randomness = 1.0
fixed_fps = 60
visibility_rect = Rect2( -100, -100, 500, 200 )
local_coords = false
process_material = SubResource( 2 )
texture = ExtResource( 4 )

[node name="RHoryzontalMove" type="Sprite" parent="Pivot/Engines"]
visible = false
position = Vector2( -10, 61 )
rotation = -3.14159
texture = ExtResource( 2 )

[node name="LHoryzontalMove" type="Sprite" parent="Pivot/Engines"]
visible = false
position = Vector2( -10, -61 )
texture = ExtResource( 2 )

[node name="RWingRotate" type="Sprite" parent="Pivot/Engines"]
visible = false
position = Vector2( -32.9064, 44 )
rotation = -1.5708
scale = Vector2( 0.5, 1 )
texture = ExtResource( 3 )

[node name="RWingRotateFront" type="Sprite" parent="Pivot/Engines"]
visible = false
position = Vector2( 15.5934, 46.0481 )
rotation = 1.5708
scale = Vector2( 0.5, 1 )
texture = ExtResource( 3 )

[node name="LWingRotate" type="Sprite" parent="Pivot/Engines"]
visible = false
position = Vector2( -32.9063, -44.0482 )
rotation = -1.5708
scale = Vector2( 0.5, 1 )
texture = ExtResource( 3 )

[node name="LWingRotateFront" type="Sprite" parent="Pivot/Engines"]
visible = false
position = Vector2( 15.5937, -45.9519 )
rotation = 1.5708
scale = Vector2( 0.5, 1 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Pivot"]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="FixedTurrets" type="Node2D" parent="Pivot"]

[node name="FixedTurret1" parent="Pivot/FixedTurrets" instance=ExtResource( 5 )]
position = Vector2( 1.13687e-13, -30 )
scale = Vector2( 0.7, 0.7 )

[node name="FixedTurret2" parent="Pivot/FixedTurrets" instance=ExtResource( 5 )]
position = Vector2( 0, 30 )
scale = Vector2( 0.7, 0.7 )

[node name="Highlight" parent="Pivot" instance=ExtResource( 8 )]
visible = false

[node name="Tween" type="Tween" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
editor_draw_limits = true

[node name="HPBar" parent="." instance=ExtResource( 7 )]
offset = Vector2( 0, -60 )
transform = Transform2D( 1, 0, 0, 1, 0, -60 )

[node name="CollisionShape" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 37.1207, 7.75746, 37.371, -8.17719, 12.1758, -12.0983, 5.74508, -49.8043, -24.614, -46.2327, -27.625, -12.95, -37.5, -6.575, -37.125, 7.675, -28, 13.05, -24.3385, 46.4091, 6.17474, 49.75, 11.8421, 12.0957 )
